[tool.poetry]
name = "casualnba-be"
version = "0.1.0"
description = ""
authors = ["Calvin Min <Calvinjmin@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.1"}
uvicorn = "^0.30.6"
hoopstats = "^0.1.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
